k8s/applications/services/data/scanservjs/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: scanservjs
  namespace: data
spec:
  selector:
    matchLabels:
      app: scanservjs
  replicas: 1
  template:
    metadata:
      labels:
        app: scanservjs
    spec:
      containers:
        - name: scanservjs
          image: sbs20/scanservjs:latest
          ports:
          - containerPort: 8080
            protocol: TCP
            name: http
          resources:
            requests:
              memory: "100Mi"
              cpu: "50m"
            limits:
              memory: "500Mi"
              cpu: "500m"
          volumeMounts:
          - name: data
            mountPath: /var/lib/scanservjs/output
          # livenessProbe:
          #   httpGet:
          #     path: /
          #     port: http
          #   initialDelaySeconds: 5
          #   periodSeconds: 30
          #   timeoutSeconds: 10
          #   failureThreshold: 5
          # readinessProbe:
          #   httpGet:
          #     path: /
          #     port: http
          #   initialDelaySeconds: 5
          #   periodSeconds: 30
          #   timeoutSeconds: 10
          #   failureThreshold: 5
        - name: scantopl
          image: ghcr.io/celedhrim/scantopl:master
          volumeMounts:
          - name: data
            mountPath: /output
      volumes:
      - name: data
        emptyDir:
