k8s/applications/services/data/scanservjs/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: scanservjs
spec:
  ports:
  - name: http
    port: 8080
    targetPort: 8080
  selector:
    app: scanservjs
