k8s/applications/services/data/scanservjs/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-http-prod
    traefik.ingress.kubernetes.io/router.middlewares: kube-system-traefik-forward-auth@kubernetescrd
  name: scanservjs
spec:
  rules:
  - host: scan.paperless.net.theleachfamily.me.uk
    http: &http_rules
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: scanservjs
            port:
              name: http
  tls:
  - hosts:
    - scan.paperless.net.theleachfamily.me.uk
    secretName: scanservjs-cert
